to do : swiper 4

--- a/index.html
+++ b/index.html
@@ -758,7 +758,8 @@
       </div>
     </section>
 
-    <!-- carousel section -->
+    <!-- Popular Destinations section -->
+
     <section class="w-full mx-auto bg-[url('/images/lake.jpg')] bg-cover py-16">
       <div class="text-center pt-20">
         <h3 class="text-secondary-color font-bold text-2xl">
@@ -769,6 +770,9 @@
           in the World
         </h1>
       </div>
+
+      <!-- swiper 2 -->
+
       <div class="max-w-6xl swiper swiper2 p-3">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper2 rounded-lg group">
@@ -1243,7 +1247,7 @@
 
     <!--top destinations -->
 
-    <section class="bg-gradient-to-b from-teal-200 jost-font p-10">
+    <section class="bg-gradient-to-b from-teal-200 jost-font p-2">
       <div class="text-center text-xl">
         <h3 class="font-bold text-primary-color-dark my-8 w-64 mx-auto">
           Top Destinations
@@ -1255,15 +1259,19 @@
 
       <!--top destination carousel swiper 3 -->
 
-      <div class="max-w-6xl swiper p-3">
+      <div class="max-w-6xl swiper swiper3 p-3">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper3 rounded-lg group">
-            <div class="from-teal-100 p-5 rounded-lg">
+            <div class="from-teal-100 rounded-lg">
               <!-- daisyui card -->
 
               <div class="card bg-base-100 shadow-xl">
                 <figure class="relative">
-                  <img src="/images/cycle.jpg" alt="" class="" />
+                  <img
+                    src="/images/cycle.jpg"
+                    alt=""
+                    class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
+                  />
                   <div
                     class="badge p-4 bg-secondary-color text-white border-white border-2 absolute top-5 right-5 font-bold"
                   >
@@ -1283,12 +1291,74 @@
             </div>
           </div>
           <div class="swiper-slide swiper3 rounded-lg group">
-            <div class="from-teal-100 p-5 rounded-lg">
+            <div class="from-teal-100 rounded-lg">
               <!-- daisyui card -->
 
               <div class="card bg-base-100 shadow-xl">
                 <figure class="relative">
-                  <img src="/images/" alt="" class="" />
+                  <img
+                    src="/images/sand.jpg"
+                    alt=""
+                    class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
+                  />
+                  <div
+                    class="badge p-4 bg-secondary-color text-white border-white border-2 absolute top-5 right-5 font-bold"
+                  >
+                    $299
+                  </div>
+                </figure>
+                <div class="card-body">
+                  <p>RIO</p>
+
+                  <h2 class="card-title">Enjoy the beauty of Brazil city</h2>
+                  <div class="flex gap-1">
+                    <img class="w-6" src="/images/star.svg" alt="" />
+                    <span> 4.9 (1.7k Review)</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper3 rounded-lg group">
+            <div class="from-teal-100 rounded-lg">
+              <!-- daisyui card -->
+
+              <div class="card bg-base-100 shadow-xl">
+                <figure class="relative">
+                  <img
+                    src="/images/cycle.jpg"
+                    alt=""
+                    class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
+                  />
+                  <div
+                    class="badge p-4 bg-secondary-color text-white border-white border-2 absolute top-5 right-5 font-bold"
+                  >
+                    $299
+                  </div>
+                </figure>
+                <div class="card-body">
+                  <p>RIO, Brazil</p>
+
+                  <h2 class="card-title">Enjoy the beauty of Brazil city</h2>
+                  <div class="flex gap-1">
+                    <img class="w-6" src="/images/star.svg" alt="" />
+                    <span> 4.9 (1.7k Review)</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper3 rounded-lg group">
+            <div class="from-teal-100 rounded-lg">
+              <!-- daisyui card -->
+
+              <div class="card bg-base-100 shadow-xl">
+                <figure class="relative">
+                  <img
+                    src="/images/sand.jpg"
+                    alt=""
+                    class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
+                  />
                   <div
                     class="badge p-4 bg-secondary-color text-white border-white border-2 absolute top-5 right-5 font-bold"
                   >
@@ -1310,7 +1380,7 @@
         </div>
 
         <div class="swiper-btn">
-          <div class="swiper-button-prev swiper3">
+          <div class="swiper-button-prev swiper3-button-prev">
             <svg
               width="20px"
               xmlns="http://www.w3.org/2000/svg"
@@ -1322,7 +1392,168 @@
               />
             </svg>
           </div>
-          <div class="swiper-button-next swiper3">
+          <div class="swiper-button-next swiper3-button-next">
+            <svg
+              width="20px"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M440.6 273.4c4.7-4.5 7.4-10.8 7.4-17.4s-2.7-12.8-7.4-17.4l-176-168c-9.6-9.2-24.8-8.8-33.9 .8s-8.8 24.8 .8 33.9L364.1 232 24 232c-13.3 0-24 10.7-24 24s10.7 24 24 24l340.1 0L231.4 406.6c-9.6 9.2-9.9 24.3-.8 33.9s24.3 9.9 33.9 .8l176-168z"
+                fill="#9ca3af"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- testimonial section -->
+
+    <section class="w-full mx-auto bg-[url('/images/stars.jpg')] bg-cover py-4">
+      <div class="text-center pt-20">
+        <h3 class="text-secondary-color font-bold text-2xl">
+          REVIEW AND TESTIMONIAL
+        </h3>
+        <h1 class="text-white text-3xl font-bold mt-5 mb-24">
+          What Our Customers Are <br />
+          Saying About Us
+        </h1>
+      </div>
+
+      <!-- swiper 4 -->
+
+      <div class="max-w-6xl swiper swiper2 p-3">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <img
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
+              <span class="text-gray-400">Green, Forest </span>
+              <h3 class="text-2xl font-bold my-2">Green Forest</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
+                src="images/lake.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <img
+                class="w-5 bg-orange-100 p-1 rounded-full inline"
+                src="images/location-dot.svg"
+                alt="location"
+              />
+              <span class="text-gray-400">Green, Forest </span>
+              <h3 class="text-2xl font-bold my-2">Green Forest</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] swiper-img"
+                src="images/lake.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/person-biking-mountain.svg"
+                    alt="activities"
+                  />
+                  <span>10 activities </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-5 inline mb-1"
+                    src="/images/map-location-dot.svg"
+                    alt="map"
+                  />
+                  <span> 12 places </span>
+                </div>
+                <div class="">
+                  <img
+                    class="w-4 inline mb-1"
+                    src="/images/calendar-days.svg"
+                    alt="calendar"
+                  />
+                  <span>1 week </span>
+                </div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="swiper-pagination"></div> -->
+
+        <div class="swiper-btn">
+          <div class="swiper-button-prev">
+            <svg
+              width="20px"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 448 512"
+            >
+              <path
+                d="M7.4 273.4C2.7 268.8 0 262.6 0 256s2.7-12.8 7.4-17.4l176-168c9.6-9.2 24.8-8.8 33.9 .8s8.8 24.8-.8 33.9L83.9 232 424 232c13.3 0 24 10.7 24 24s-10.7 24-24 24L83.9 280 216.6 406.6c9.6 9.2 9.9 24.3 .8 33.9s-24.3 9.9-33.9 .8l-176-168z"
+                fill="#9ca3af"
+              />
+            </svg>
+          </div>
+          <div class="swiper-button-next">
             <svg
               width="20px"
               xmlns="http://www.w3.org/2000/svg"
@@ -1406,8 +1637,8 @@
         },
 
         navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
+          nextEl: ".swiper3-button-next",
+          prevEl: ".swiper3-button-prev",
         },
       });
     </script>
