--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@
 
       <!-- swiper 4 -->
 
-      <div class="max-w-6xl swiper swiper4 p-3">
+      <div class="max-w-6xl swiper swiper4 p-10">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper4 rounded-lg group">
             <div
@@ -1445,7 +1445,11 @@
                 temporibus laudantium, fugit accusamus placeat numquam quis
                 fugiat! Aut placeat quasi odit ab?
               </p>
-              <h3 class="text-2xl font-bold">Abigail Dawson</h3>
+              <h3
+                class="text-2xl font-bold group-hover:text-primary-color-dark"
+              >
+                Abigail Dawson
+              </h3>
               <p>generated company</p>
             </div>
           </div>
