svg hover color change

--- a/index.html
+++ b/index.html
@@ -1429,11 +1429,21 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
             >
-              <img
+              <!-- <img
                 class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9"
                 src="/images/quote-right.svg"
                 alt=""
-              />
+              /> -->
+              <svg
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 quote-svg"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"
+                  fill="white"
+                />
+              </svg>
               <img
                 class="hover:scale-x-105 transition-all duration-[3000ms] rounded-full border-2 border-white"
                 src="images/P1.jpg"
