--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,7 @@
 
     <!-- testimonial section -->
 
-    <section class="w-full mx-auto bg-[url('/images/stars.jpg')] bg-cover py-4">
+    <section class="w-full mx-auto bg-[url('/images/sand.jpg')] bg-cover py-4">
       <div class="text-center pt-20">
         <h3 class="text-secondary-color font-bold text-2xl">
           REVIEW AND TESTIMONIALS
@@ -1429,13 +1429,8 @@
             <div
               class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
             >
-              <!-- <img
-                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9"
-                src="/images/quote-right.svg"
-                alt=""
-              /> -->
               <svg
-                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 quote-svg"
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 group-hover:bg-primary-color-dark"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 512 512"
               >
@@ -1445,22 +1440,199 @@
                 />
               </svg>
               <img
-                class="hover:scale-x-105 transition-all duration-[3000ms] rounded-full border-2 border-white"
+                class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
                 src="images/P1.jpg"
                 alt=""
               />
               <p class="text-base my-2">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Cupiditate pariatur accusantium ipsa, ea unde tenetur odit atque
-                temporibus laudantium, fugit accusamus placeat numquam quis
-                fugiat! Aut placeat quasi odit ab?
+                "I've always been passionate about exploring the great outdoors,
+                and Natural Travel made my dream trip to the Amazon rainforest a
+                reality. Their expert guides and carefully curated itinerary
+                allowed me to immerse myself in the local culture and witness
+                the breathtaking beauty of nature up close. I couldn't recommend
+                them more!"
               </p>
               <h3
                 class="text-2xl font-bold group-hover:text-primary-color-dark"
               >
                 Abigail Dawson
               </h3>
-              <p>generated company</p>
+              <p>company.com</p>
+            </div>
+          </div>
+          <div class="swiper-slide swiper4 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
+            >
+              <svg
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 group-hover:bg-primary-color-dark"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"
+                  fill="white"
+                />
+              </svg>
+              <img
+                class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
+                src="images/P2.jpg"
+                alt=""
+              />
+              <p class="text-base my-2">
+                "As a busy professional, I don't often get to take time off, but
+                Natural Travel's guided hiking tour in New Zealand was the
+                perfect escape. The scenery was stunning, the accommodations
+                were comfortable, and the group was fantastic. I felt
+                rejuvenated and inspired by the end of the trip. Natural Travel
+                truly knows their work!"
+              </p>
+              <h3
+                class="text-2xl font-bold group-hover:text-primary-color-dark"
+              >
+                Mark K.
+              </h3>
+              <p>company.com</p>
+            </div>
+          </div>
+          <div class="swiper-slide swiper4 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
+            >
+              <svg
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 group-hover:bg-primary-color-dark"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"
+                  fill="white"
+                />
+              </svg>
+              <img
+                class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
+                src="images/p3.jpg"
+                alt=""
+              />
+              <p class="text-base my-2">
+                "I was a bit hesitant to travel solo, but Natural Travel's small
+                group tour to Costa Rica made me feel like I was part of a
+                community. Our guide was knowledgeable and enthusiastic, and the
+                activities were always exciting and safe. I loved the focus on
+                sustainability and supporting local communities. I'm already
+                planning my next trip"
+              </p>
+              <h3
+                class="text-2xl font-bold group-hover:text-primary-color-dark"
+              >
+                Emily G.
+              </h3>
+              <p>company.com</p>
+            </div>
+          </div>
+          <div class="swiper-slide swiper4 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
+            >
+              <svg
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 group-hover:bg-primary-color-dark"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"
+                  fill="white"
+                />
+              </svg>
+              <img
+                class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
+                src="images/P1.jpg"
+                alt=""
+              />
+              <p class="text-base my-2">
+                "I've always been passionate about exploring the great outdoors,
+                and Natural Travel made my dream trip to the Amazon rainforest a
+                reality. Their expert guides and carefully curated itinerary
+                allowed me to immerse myself in the local culture and witness
+                the breathtaking beauty of nature up close. I couldn't recommend
+                them more!"
+              </p>
+              <h3
+                class="text-2xl font-bold group-hover:text-primary-color-dark"
+              >
+                Abigail Dawson
+              </h3>
+              <p>company.com</p>
+            </div>
+          </div>
+          <div class="swiper-slide swiper4 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
+            >
+              <svg
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 group-hover:bg-primary-color-dark"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"
+                  fill="white"
+                />
+              </svg>
+              <img
+                class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
+                src="images/P2.jpg"
+                alt=""
+              />
+              <p class="text-base my-2">
+                "As a busy professional, I don't often get to take time off, but
+                Natural Travel's guided hiking tour in New Zealand was the
+                perfect escape. The scenery was stunning, the accommodations
+                were comfortable, and the group was fantastic. I felt
+                rejuvenated and inspired by the end of the trip. Natural Travel
+                truly knows their work !"
+              </p>
+              <h3
+                class="text-2xl font-bold group-hover:text-primary-color-dark"
+              >
+                Mark K.
+              </h3>
+              <p>company.com</p>
+            </div>
+          </div>
+          <div class="swiper-slide swiper4 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg relative"
+            >
+              <svg
+                class="bg-gray-500 w-16 rounded-full p-4 absolute right-5 -top-9 group-hover:bg-primary-color-dark"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"
+              >
+                <path
+                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"
+                  fill="white"
+                />
+              </svg>
+              <img
+                class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
+                src="images/p3.jpg"
+                alt=""
+              />
+              <p class="text-base my-2">
+                "I was a bit hesitant to travel solo, but Natural Travel's small
+                group tour to Costa Rica made me feel like I was part of a
+                community. Our guide was knowledgeable and enthusiastic, and the
+                activities were always exciting and safe. I loved the focus on
+                sustainability and supporting local communities. I'm already
+                planning my next trip"
+              </p>
+              <h3
+                class="text-2xl font-bold group-hover:text-primary-color-dark"
+              >
+                Emily G.
+              </h3>
+              <p>company.com</p>
             </div>
           </div>
         </div>
@@ -1578,7 +1750,7 @@
         breakpoints: {
           100: {
             slidesPerView: 1,
-            spaceBetween: 20,
+            spaceBetween: 40,
           },
           768: {
             slidesPerView: 2,
