--- a/index.html
+++ b/index.html
@@ -704,13 +704,17 @@
         </div>
       </div>
     </section>
-    <!-- provide section -->
-    <section class="max-w-6xl w-full mx-auto">
+
+    <!-- services section -->
+
+    <section class="max-w-6xl w-full mx-auto text-center jost-font">
       <h2 class="text-2xl font-bold text-secondary-color">OUR SERVICES</h2>
-      <div class="flex items-center justify-evenly">
-        <h1 class="text-4xl font-bold">TOP VALUES FOR YOU</h1>
+      <div class="flex flex-wrap items-center justify-evenly">
+        <h1 class="text-4xl font-bold my-5">TOP VALUES FOR YOU</h1>
         <img class="w-64" src="images/friend.svg" alt="" />
       </div>
+
+      <!-- 3 images -->
       <div class="flex flex-wrap gap-5 justify-center items-center my-24">
         <div
           class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10 flex flex-col items-center"
@@ -1441,7 +1445,7 @@
               </svg>
               <img
                 class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
-                src="images/P1.jpg"
+                src="images/p1.jpg"
                 alt=""
               />
               <p class="text-base my-2">
@@ -1476,7 +1480,7 @@
               </svg>
               <img
                 class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
-                src="images/P2.jpg"
+                src="images/p2.jpg"
                 alt=""
               />
               <p class="text-base my-2">
@@ -1546,7 +1550,7 @@
               </svg>
               <img
                 class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
-                src="images/P1.jpg"
+                src="images/p1.jpg"
                 alt=""
               />
               <p class="text-base my-2">
@@ -1581,7 +1585,7 @@
               </svg>
               <img
                 class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
-                src="images/P2.jpg"
+                src="images/p1.jpg"
                 alt=""
               />
               <p class="text-base my-2">
@@ -1616,7 +1620,7 @@
               </svg>
               <img
                 class="group-hover:-translate-y-2 duration-[500ms] rounded-full border-2 border-white"
-                src="images/p3.jpg"
+                src="images/p1.jpg"
                 alt=""
               />
               <p class="text-base my-2">
@@ -1665,6 +1669,21 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!--News and Articles -->
+
+    <section class="bg-gradient-to-b from-teal-200 jost-font p-2">
+      <div class="text-center text-xl">
+        <h3 class="font-bold text-primary-color-dark my-8 w-64 mx-auto">
+          News & Articles
+        </h3>
+        <h2 class="text-3xl font-bold mb-8 min-w-80 mx-auto">
+          Stay Update with Natural Travel
+        </h2>
+      </div>
+
+      <!--  3 images -->
     </section>
 
     <!-- Swiper JS -->
