--- a/index.html
+++ b/index.html
@@ -1684,6 +1684,26 @@
       </div>
 
       <!--  3 images -->
+      <div
+        class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto w-full p-5"
+      >
+        <div
+          class="bg-[url('/images/mountain2.jpg')] bg-cover border-4 border-white rounded-xl p-3 text-white group"
+        >
+          <p class="mt-32">June 6, 2016. John Smith</p>
+          <h3 class="text-xl font-bold group-hover:text-secondary-color">
+            Refresh your mood and visit some awesome place
+          </h3>
+        </div>
+        <div class="bg-[url('/images/lighthouse.jpg')] bg-cover">
+          <p>June 6, 2016. John Smith</p>
+          <h3>Refresh your mood and visit some awesome place</h3>
+        </div>
+        <div class="bg-[url('/images/lighthouse.jpg')] bg-cover">
+          <p>June 6, 2016. John Smith</p>
+          <h3>Refresh your mood and visit some awesome place</h3>
+        </div>
+      </div>
     </section>
 
     <!-- Swiper JS -->
