--- a/index.html
+++ b/index.html
@@ -1684,7 +1684,7 @@
       </div>
 
       <!--  3 images -->
-      <div
+      <!-- <div
         class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto w-full p-5"
       >
         <div
@@ -1695,13 +1695,33 @@
             Refresh your mood and visit some awesome place
           </h3>
         </div>
-        <div class="bg-[url('/images/lighthouse.jpg')] bg-cover">
-          <p>June 6, 2016. John Smith</p>
-          <h3>Refresh your mood and visit some awesome place</h3>
-        </div>
-        <div class="bg-[url('/images/lighthouse.jpg')] bg-cover">
-          <p>June 6, 2016. John Smith</p>
-          <h3>Refresh your mood and visit some awesome place</h3>
+      </div> -->
+
+      <!-- more css under news images section  -->
+      <div class="flex items-center justify-center p-5">
+        <div class="flex flex-wrap justify-center">
+          <div class="card-zoom group">
+            <div
+              class="card-zoom-image bg-[url('/images/mountain2.jpg')]"
+            ></div>
+            <h1 class="card-zoom-text">
+              <p class="">June 6, 2016. John Smith</p>
+              <p class="group-hover:text-secondary-color">
+                Refresh your mood and visit some awesome place
+              </p>
+            </h1>
+          </div>
+          <div class="card-zoom group">
+            <div
+              class="card-zoom-image bg-[url('/images/mountain2.jpg')]"
+            ></div>
+            <h1 class="card-zoom-text">
+              <p class="">June 6, 2016. John Smith</p>
+              <p class="group-hover:text-secondary-color">
+                Refresh your mood and visit some awesome place
+              </p>
+            </h1>
+          </div>
         </div>
       </div>
     </section>
