--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <title>Natural Travel</title>
 
     <link rel="stylesheet" href="swiper-bundle.css" />
@@ -1684,18 +1684,6 @@
       </div>
 
       <!--  3 images -->
-      <!-- <div
-        class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto w-full p-5"
-      >
-        <div
-          class="bg-[url('/images/mountain2.jpg')] bg-cover border-4 border-white rounded-xl p-3 text-white group"
-        >
-          <p class="mt-32">June 6, 2016. John Smith</p>
-          <h3 class="text-xl font-bold group-hover:text-secondary-color">
-            Refresh your mood and visit some awesome place
-          </h3>
-        </div>
-      </div> -->
 
       <!-- more css under news images section  -->
       <div class="flex items-center justify-center p-5">
@@ -1706,18 +1694,27 @@
             ></div>
             <h1 class="card-zoom-text">
               <p class="">June 6, 2016. John Smith</p>
-              <p class="group-hover:text-secondary-color">
+              <p class="group-hover:text-secondary-color font-bold">
                 Refresh your mood and visit some awesome place
               </p>
             </h1>
           </div>
           <div class="card-zoom group">
             <div
-              class="card-zoom-image bg-[url('/images/mountain2.jpg')]"
+              class="card-zoom-image bg-[url('/images/mountain3.jpg')]"
             ></div>
             <h1 class="card-zoom-text">
               <p class="">June 6, 2016. John Smith</p>
-              <p class="group-hover:text-secondary-color">
+              <p class="group-hover:text-secondary-color font-bold">
+                Refresh your mood and visit some awesome place
+              </p>
+            </h1>
+          </div>
+          <div class="card-zoom group">
+            <div class="card-zoom-image bg-[url('/images/forest.jpg')]"></div>
+            <h1 class="card-zoom-text">
+              <p class="">June 6, 2016. John Smith</p>
+              <p class="group-hover:text-secondary-color font-bold">
                 Refresh your mood and visit some awesome place
               </p>
             </h1>
