--- a/index.html
+++ b/index.html
@@ -1723,6 +1723,20 @@
       </div>
     </section>
 
+    <!-- footer -->
+    <section class="bg-gradient-to-b from-teal-200 jost-font p-2">
+      <div
+        class="w-full max-w-6xl mx-auto bg-white rounded-xl grid grid-cols-3 md:grid-cols-6 p-10 gap-5 items-center justify-items-center"
+      >
+        <img src="/images/partner-logo-1.png" alt="" />
+        <img src="/images/partner-logo-2.png" alt="" />
+        <img src="/images/partner-logo-3.png" alt="" />
+        <img src="/images/partner-logo-4.png" alt="" />
+        <img src="/images/partner-logo-5.png" alt="" />
+        <img src="/images/partner-logo-6.png" alt="" />
+      </div>
+    </section>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
